kubernetes/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: video-backend-service
spec:
  type: ClusterIP
  selector:
    app: video-backend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
