kubernetes/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: video-frontend-service
spec:
  selector:
    app: video-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30082
  type: NodePort
